--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </div>
         <hr>
         <h2 style="color: #11999E;">Projects</h3>
-        <div class="col-lg-2 col-3  projects">
+        <div class="projects">
             <div class="project1">
             <img class="allinonefoodapp" src="Images\All IN ONE FOOD APP.png" alt="app">
              <h3>All IN ONE FOOD APP</h3>
